Bug 337319 - frameworks: what is a backtrace ui layout broken
Summary: frameworks: what is a backtrace ui layout broken
Status: RESOLVED FIXED
Alias: None
Product: drkonqi
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords:
: 387937 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-07-10 12:02 UTC by Harald Sitter
Modified: 2019-03-21 11:09 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screenshot (642.85 KB, image/png)
2014-07-10 12:02 UTC, Harald Sitter
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Harald Sitter 2014-07-10 12:02:11 UTC
the 'what is a "backtrace"' ui as a broken layout incorrectly sizing the window so the text is cut off by default.

Reproducible: Always
Comment 1 Harald Sitter 2014-07-10 12:02:48 UTC
Created attachment 87678 [details]
screenshot
Comment 2 Andrew Crouthamel 2018-11-12 02:45:59 UTC
Dear Bug Submitter,

This bug has been stagnant for a long time. Could you help us out and re-test if the bug is valid in the latest version? I am setting the status to NEEDSINFO pending your response, please change the Status back to REPORTED when you respond.

Thank you for helping us make KDE software even better for everyone!
Comment 3 Patrick Silva 2018-11-12 12:23:47 UTC
bug persists in plasma 5, reported as bug 387937
Comment 4 Andrew Crouthamel 2018-11-12 16:21:13 UTC
*** Bug 387937 has been marked as a duplicate of this bug. ***
Comment 5 Andrew Crouthamel 2018-11-12 16:21:40 UTC
Thanks for the update!
Comment 6 Harald Sitter 2019-03-21 11:09:28 UTC
Git commit cc640cea3e9cc1806000804bbf424cb611622e45 by Harald Sitter.
Committed on 21/03/2019 at 11:05.
Pushed by sitter into branch 'Plasma/5.15'.

adjust the size of the window after the labels sizes were changed

Summary:
during backtrace loading the widgets get mutated a lot, changing their size
to very long, or very short, but certainly different than from what they
were originally when the window was sized.

as a result the window may now be too small to actually fit the content and
overlap some of the widgets. to resolve this problem we now force a size
adjustment when the backtracewidget changes. other pages, from what I
can tell are not affected.

the layout of this page is a fairly involved unfortuntely, so adjusting
on the fly is the best we can do I fear

CHANGELOG: The crash dialog no longer cuts off text after backtracing

Test Plan:
- crash
- try to report bug
- dialog text not cut off (LANGUAGE=de helps with triggering the problem)
- go to advanced backtrace view, still fine

- crash
- go to advanced view in the main window, still fine

Reviewers: #plasma, davidedmundson

Reviewed By: #plasma, davidedmundson

Subscribers: plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D19390

M  +6    -0    src/backtracewidget.cpp

https://commits.kde.org/drkonqi/cc640cea3e9cc1806000804bbf424cb611622e45